--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "acsset": "^0.2.1",
     "body-parser": "^1.15.2",
+    "connect-multiparty": "^2.0.0",
     "dotenv": "^2.0.0",
     "express": "~4.14.0",
-    "mongoose": "^4.6.8"
+    "mongoose": "^4.6.8",
+    "ng-file-upload": "^12.2.13"
   },
   "author": "Matheus Piscioneri <mxczpiscioneri@gmail.com> (http://matheuspiscioneri.com.br)",
   "license": "MIT",
