--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "acsset": "^0.2.1",
+    "aws-sdk": "^2.45.0",
     "body-parser": "^1.15.2",
     "connect-multiparty": "^2.0.0",
     "dotenv": "^2.0.0",
