--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-multiparty": "^2.0.0",
     "dotenv": "^2.0.0",
     "express": "~4.14.0",
+    "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.6.8",
     "ng-file-upload": "^12.2.13"
   },
